syntax = "proto3";
package jwt.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/solo-projects/projects/gloo/pkg/api/v1/plugins/jwt";

import "github.com/solo-io/solo-kit/api/v1/ref.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

message VhostExtension {
    // The url used when accessing the upstream for Json Web Key Set.
    // This is used to set the host and path in the request
    string jwks_url = 1;
    // The Upstream representing the Json Web Key Set server
    core.solo.io.ResourceRef jwks_upstream_ref = 2;

    // An incoming JWT must have an 'aud' claim and it must be in this list.
    repeated string audiences = 3;
    // Issuer of the JWT. the 'iss' claim of the JWT must match this.
    string issuer = 4;
}

message RouteExtension {
    // Disable JWT checks on this route.
    bool disable = 1;
}
